--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Created by Priyansh Agrawal -->
+<!-- Created by Pradhumn Agrawal -->
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
