--- a/index.html
+++ b/index.html
@@ -106,6 +106,19 @@
     </SCRIPT>
   </head>
   <body>
+    <body>
+    <div class="wrapper">
+      <div class="display">
+        <div id="time">
+</div>
+    <div class="wrapper">
+      <div class="display">
+        <div id="date">
+</div>
+</div>
+<span></span>
+      <span></span>
+    </div>
     <nav class="navbar navbar-expand-lg navbar-light bg-info" >
         <a class="navbar-brand" href="#">world clock</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
