--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@ html,body{
 }
 .display #time{
   line-height: 85px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;   
+  width: 100vw;
   color: #fff;
   font-size: 50px;
   font-weight: 600;
