--- a/index.html
+++ b/index.html
@@ -1,16 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-
-    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   
-    <title>Javascript_clock</title>
+    <title>Clock</title>
     <style>
       *{
   margin: 0;
@@ -42,17 +37,17 @@ html,body{
 .wrapper .display{
   z-index: 999;
   height: 85px;
-  width: 645px;
+  width: 345px;
   background: #1b1b1b;
   border-radius: 6px;
   text-align: center;
 }
 .display #time{
-  line-height: 65px;
+  line-height: 55px;
   background-repeat: no-repeat;
   background-size: cover;
   height: 90vh;   
-  width: 66vw;
+  width: 60vw;
   color: #fff;
   font-size: 50px;
   font-weight: 600;
