--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  
-    <title>Clock</title>
-    <style>
-      *{
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <style>
+    
+*{
   margin: 0;
   padding: 0;
   font-family: 'Poppins', sans-serif;
@@ -73,28 +72,16 @@ html,body{
 .one {color:#FFF;
 }
 </style>
-<body>
+  <body>
     <div class="wrapper">
       <div class="display">
         <div id="time">
-</div>
-    <div class="wrapper">
-      <div class="display">
-        <div id="date">
 </div>
 </div>
 <span></span>
       <span></span>
     </div>
 <script>
-      let a;
-      let date;
-      let day;
-      /* let days = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];*/
-      const options = { weekday:'long' , year:'numeric' ,month:'long' ,day:'numeric'}
-      setInterval(() => {
-        a = new Date();
-        date = a.toLocaleDateString(undefined,options);
       setInterval(()=>{
         const time = document.querySelector(".display #time");
         let date = new Date();
@@ -118,10 +105,10 @@ html,body{
         time.textContent = hours + ":" + minutes + ":" + seconds + " "+ day_night;
       });
     </script>
-        </body>
-      <footer class="one">
+
+  </body>
+  <footer class="one">
      Created With_&#x2665;_by Priyansh Agrawal<br>
       
   </footer>
-      </html>
-
+</html>
